<resources>
    <string name="app_name">Book Library</string>
    <string name="search">Search</string>
    <string name="search_for_book">Search for book</string>
    <string name="bookname">BookName</string>
    <string name="book_price">Book Price:</string>
    <string name="bookcategory">BookCategory</string>
    <string name="author">Author</string>
    <string name="add">Add</string>
    <string name="serch_book_name">Serch Book Name</string>
    <string name="delete">Delete</string>
    <string name="book_name">Book Name</string>
    <string name="book_id">Book ID</string>
    <string name="book_author">Book Author</string>
    <string name="add_a_book">Add a Book</string>
    <string name="add_book">Add Book</string>
    <string name="book_namee">Book Name:</string>
    <string name="book_pricee">Book Price:</string>
    <string name="book_idd">Book ID:</string>
    <string name="book_authorr">Book Author:</string>
</resources>