<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearLayout"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:orientation="horizontal"
              android:layout_height="170dp" android:baselineAligned="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/book_namee"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bookname"
        android:id="@+id/bookname"
        android:layout_weight="1"
        android:textSize="20sp" />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/book_pricee"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/book_price"
        android:id="@+id/bookprice"
        android:layout_weight="1"
        android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/book_idd"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bookcategory"
            android:id="@+id/bookcategory"
            android:layout_weight="1"
            android:textSize="20sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/book_authorr"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/author"
            android:id="@+id/bookauthor"
            android:layout_weight="1"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
