<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:backgroundTint="#E1E1E1"
        android:orientation="horizontal"
        android:layout_height="70dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bookname"
                android:id="@+id/booknameactivity2"
                android:layout_weight="1"
                android:textSize="20sp" />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/book_price"
                android:id="@+id/bookpriceactivity2"
                android:layout_weight="1"
                android:textSize="20sp" />

    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete"
            android:id="@+id/delete"
        android:backgroundTint="#FF3333" />

</LinearLayout>
