<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent"
        tools:context=".AddBook">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="Enter Book ID: "
              android:layout_margin="10dp"
              android:layout_gravity="left"
              android:textStyle="bold"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Book ID"
            android:hint="@string/book_id"
            android:id="@+id/book_id"
            android:gravity="center"
            android:layout_margin="10dp"
            android:inputType="text" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="Enter Book Name: "
              android:layout_margin="10dp"
              android:layout_gravity="left"
              android:textStyle="bold"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Book Name"
            android:hint="@string/book_name"
            android:id="@+id/book_name"
            android:gravity="center"
            android:layout_margin="10dp"
            android:inputType="text" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="Enter Book Author Name: "
              android:layout_margin="10dp"
              android:layout_gravity="left"
              android:textStyle="bold"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Book Author"
            android:hint="@string/book_author"
            android:id="@+id/book_author"
            android:gravity="center"
            android:layout_margin="10dp"
            android:inputType="text" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="Enter Book Price: "
              android:layout_margin="10dp"
              android:layout_gravity="left"
              android:textStyle="bold"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Book Price"
            android:hint="@string/book_price"
            android:id="@+id/book_price"
            android:gravity="center"
            android:layout_margin="10dp"
            android:inputType="text" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_gravity="end"
            android:id="@+id/save"
            android:padding="10dp"
            android:layout_margin="10dp" />

</LinearLayout>